# fastapi_example

./: Dockerfile  Evolution Patterns.md  Makefile  README.md  pyproject.toml
app/: context.py  settings.py
app/database/: session.py
app/domains/notification/: clients.py  services.py
app/domains/user/: abc.py  exceptions.py  models.py  repo.py  services.py
logs/: app.txt
